css/sviewer.css
html, body {
    margin: 0px;
    padding: 0px;
    width: 100%;
    height: 100%;
    background-color: #333333;
}

body {
    display: flex;
    flex-direction: column;
}


/* Bootstrap button overrides */
.btn-dark {
    background-color: #626161;
    border-color: #aaa;
    color: #fff;
}

.btn-dark:hover,
.btn-dark:focus {
    background-color: #3f3f3f;
    border-color: #888;
}


/* Overrides openlayers styles */
.ol-control button {
    color: #fff;
    background-color: #626161;
}

.ol-control button:hover,
.ol-control button:focus {
    background-color: #888;
}

.ol-attribution ul {
    max-width: 100%;
}



label {
    font-size: small !important;
}

p.center {
	text-align: center;
}


/* page structure */
.sv-framemap {
    flex: 1;
    padding: 0px;
    background: transparent url('images/bgpaper.jpg');
    overflow: hidden;
}

.sv-map-controls {
    position: absolute;
    top: 4px;
    left: 4px;
    display: flex;
    flex-direction: column;
    gap: 4px;
    z-index: 8000;
}

.sv-map-btn {
    width: 44px;
    height: 44px;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 4px;
    border: 1px solid #1f1f1f;
    font-size: 0.75rem;
    color: #fff;
}

.sv-map-btn svg {
    width: 20px;
    height: 20px;
    display: block;
}

.sv-map-panels {
    position: absolute;
    top: 4px;
    right: 4px;
    display: flex;
    flex-direction: column;
    gap: 4px;
    z-index: 8010;
}

@media screen and (max-width: 600px) {
    .sv-map-btn {
        width: 32px;
        height: 32px;
        font-size: 0.6rem;
    }
}

/* map components */

.sv-map {
    width: 100%;
    height: 100%;
    cursor: hand;
}


#marker {
    width: 30px;
    height: 38px;
    background: transparent url('images/pin-red.png') no-repeat;
}

.sv-map .ol-zoom a {
    display: none;
}

.sv-map .ol-scale-line {
    background-color: rgba(255,255,255,0.7);
}

.sv-map .ol-scale-line-inner {
    color: #333333;
    border-color: #333333;
}

.sv-map .ol-attribution {
    color: #333333;
    background-color: rgba(255,255,255,0.7);
    border-top-left-radius: 4px;
}

.sv-map .ol-attribution a {
    text-decoration: underline;
}

/* panels */

.modal-lg {
    max-width: 900px;
}

/* Loading spinner */
.sv-spinner {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 9999;
    display: none;
}

.sv-spinner.show {
    display: flex;
}

/* legend layout */

.sv-legend {
    font-size: small;
}

.sv-legend a {
    text-decoration: none;
}
.sv-legend h4,p {
    padding: 0 0 2px 0 !important;
    margin: 0;
}
.sv-legend hr {
    clear: both;
}
.sv-md {
    border: 1px solid #cccccc;
    border-radius: 4px;
    padding: 6px;
    margin-bottom: 6px;
    background-color: #ffffff;
}
.sv-md-title {
    font-size: x-small;
}
.sv-md-abstract {
}
.sv-md-attrib {
    display: block;
    float: right;
    text-align: right;
    max-width: 80px;
    font-size: x-small;
}
.sv-md-logo {
    max-height: 64px;
    max-width: 64px;
}
.sv-md-legend {
    padding: 4px;
    max-width: 320px;
}
.sv-md-meta {
    text-decoration: none;
}

/* share layout */

.sv-permalink-wrap {
    text-align: center;
    margin: 0 0 0 8px;
}

/* query layout */

.sv-noitem {
    font-style: italic;
    color: #666;
}

.sv-key {
    color: #999;
    font-size: small;
}

.sv-value {
    font-size: small;
}

.sv-feature a {
    font-size: 0.7em;
}
.sv-location a {
    font-size: 0.7em;
}

